# lemur

./: .env  .gitignore  Cargo.toml  diesel.toml  readme.md
migrations/2024-06-21-210050_create_cards/: down.sql  up.sql
scripts/: reset_database.sh
src/: database_connection_extractor.rs  db.rs  gis.rs  main.rs  models.rs  prerender.text  schema.rs
templates/: all_cards.html  index.html  learn.html  new_card.html
