[package]
name = "lemur-locator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.2.1", features = ["sqlite", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
tera = "1.20.0"
tokio = "1.38.0"
tower-http = { version = "0.5.2", features = ["compression-gzip"] }
rand = "0.8.5"